actualización imagenes de estados de entrega

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="/assets/logo.png" alt="Logo" width="40" height="40" class="me-2">
-                    <span class="fs-4">Localizador de paquetes electorales</span>
+                    <img src="https://via.placeholder.com/40x40" alt="Logo" width="40" height="40" class="me-2">
+                    <span class="fs-4">Localizador IoT</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -75,6 +75,7 @@
                             <th>Paquete</th>
                             <th>Estatus</th>
                             <th>Ubicación</th>
+                            <th>Estado antes de entrega</th>
                         </tr>
                     </thead>
                     <tbody id="registrosTableBody">
@@ -85,7 +86,7 @@
     </main>
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
-        <p>&copy; 2025 Localizador de paquetes INE. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Localizador IoT. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
