--- a/control.html
+++ b/control.html
@@ -13,8 +13,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="/assets/logo.png" alt="Logo" width="40" height="40" class="me-2">
-                    <span class="fs-4">Localizador de paquetes INE</span>
+                    <img src="https://via.placeholder.com/40x40" alt="Logo" width="40" height="40" class="me-2">
+                    <span class="fs-4">Localizador IoT</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,6 @@
                         <tr>
                             <th>ID</th>
                             <th>CAE</th>
-                            <th>Zona electoral</th>
                             <th>Paquete</th>
                             <th>Estatus</th>
                             <th>Ubicación</th>
@@ -64,6 +63,20 @@
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <p>&copy; 2025 Localizador IoT. Todos los derechos reservados.</p>
     </footer>
+
+    <div class="modal fade" id="mapModal" tabindex="-1" aria-labelledby="mapModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="mapModalLabel">Estado antes de entrega</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+                    <img id="mapImage" src="" class="img-fluid" alt="Mapa de ubicación">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
